# annotation-gui

./: Makefile  README.md  config.ini  environment.yml  pyproject.toml
annotation_gui/: __main__.py  utils.py
annotation_gui/direct_obj/: do_app.py
annotation_gui/stats/: helper.py
data/direct_obj/deepseek/bridge/: step_2_do_verb_results_only.csv
data/direct_obj/deepseek/rt1/: step_1_full_results.csv  step_2_do_verb_results_only.csv
data/direct_obj/deepseek/scout/: step_2_do_verb_results_only.csv
data/direct_obj/deepseek/tacoplay/: step_1_full_results.csv  step_2_do_verb_results_only.csv
