[project]
name = "annotation_gui"
dynamic = ["version"]
dependencies = [
    "pandas",
    "numpy",
    "ipykernel",
    "ipython",
    "matplotlib",
    "streamlit",
    "scipy"
]
requires-python = "~=3.10"

[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["annotation_gui"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "pylint==3.0.3",
    "pynvim==0.5.0",
]
test = [
    "pytest==7.4.3",
]